Module #5. V30_08_2026. Update [payment-provider-service].
