# payment-provider-service/openapi/payment-provider-service-api-specification.yaml
@@ -9,49 +9,6 @@ servers:
   - url: http://payment-provider-service:8086
 
 paths:
-  /api/v1/transactions/create:
-    post:
-      summary: Create a new transaction
-      security:
-        - basicAuth: []
-      operationId: createTransaction
-      tags:
-        - Transaction
-      parameters:
-        - name: Authorization
-          in: header
-          required: true
-          schema:
-            type: string
-          description: Basic authorization header
-        - name: x-trace-id
-          in: header
-          required: false
-          schema:
-            type: string
-          description: Identifier of open telemetry trace
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/TransactionRequestDto"
-      responses:
-        201:
-          description: Transaction was created successfully
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/TransactionResponseDto"
-        400:
-          description: Transaction request is incorrect
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorDto"
-        401:
-          description: Request is unauthorized or credentials are incorrect
-
   /api/v1/transactions/list-on-period:
     get:
       summary: Get list of transactions on described period
@@ -107,7 +64,7 @@ paths:
 
   /api/v1/transactions/info/{id}:
     get:
-      summary: Get transaction info by id
+      summary: Get transaction info by specified id
       security:
         - basicAuth: []
       operationId: getTransactionInfo
@@ -118,7 +75,8 @@ paths:
           name: id
           required: true
           schema:
-            $ref: "#/components/schemas/UuidDefinition"
+            type: string
+            format: uuid
           description: Transaction id
         - name: Authorization
           in: header
@@ -147,84 +105,8 @@ paths:
                 $ref: "#/components/schemas/ErrorDto"
         401:
           description: Request is unauthorized or credentials are incorrect
-
-  /api/v1/transactions/cancel:
-    post:
-      summary: Cancel transaction by specified id
-      security:
-        - basicAuth: []
-      operationId: cancelTransaction
-      tags:
-        - Transaction
-      parameters:
-        - name: Authorization
-          in: header
-          required: true
-          schema:
-            type: string
-          description: Basic authorization header
-        - name: x-trace-id
-          in: header
-          required: false
-          schema:
-            type: string
-          description: Identifier of open telemetry trace
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/CancelTransactionDto"
-      responses:
-        200:
-          description: Transaction with specified id was canceled successfully
-        400:
-          description: No any transaction with specified id was found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorDto"
-        401:
-          description: Request is unauthorized or credentials are incorrect
-
-  /api/v1/webhook/transactions/update-status:
-    post:
-      summary: Incoming notification about transaction status
-      security:
-        - basicAuth: []
-      operationId: updateTransactionStatus
-      tags:
-        - Webhook
-      parameters:
-        - name: Authorization
-          in: header
-          required: true
-          schema:
-            type: string
-          description: Basic authorization header
-        - name: x-trace-id
-          in: header
-          required: false
-          schema:
-            type: string
-          description: Identifier of open telemetry trace
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/TransactionStatusDto"
-      responses:
-        200:
-          description: Notification was received and transaction status was updated
-        400:
-          description: No any transaction with specified id was found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ErrorDto"
-        401:
-          description: Request is unauthorized or credentials are incorrect
+        403:
+          description: Received request for merchant which hasn't got any permission to handle operation
 
   /api/v1/admin/merchants/register:
     post:
@@ -256,7 +138,7 @@ paths:
         401:
           description: Unauthorized (invalid credentials)
         409:
-          description: Merchant with this merchantId already exists
+          description: Merchant with specified merchantId already exists
           content:
             application/json:
               schema:
@@ -265,8 +147,6 @@ paths:
 tags:
   - name: Transaction
     description: Describes operations with transactions
-  - name: Webhook
-    description: Describes operations with webhooks
   - name: Admin
     description: Administrative operations
 
@@ -277,35 +157,81 @@ components:
       scheme: basic
 
   schemas:
-    TransactionRequestDto:
+    CreateTransactionRequestDto:
       type: object
-      required: [ operationType, amount, currency, properties ]
+      required: [ transactionId, merchantId, traceId, operation, amount, currency, notificationUrl, createdAt, updatedAt ]
       properties:
-        operationType:
-          $ref: "#/components/schemas/OperationType"
+        transactionId:
+          type: string
+          format: uuid
+        merchantId:
+          type: string
+        traceId:
+          type: string
+        operation:
+          $ref: "#/components/schemas/Operation"
         amount:
           $ref: "#/components/schemas/AmountDefinition"
         currency:
           $ref: "#/components/schemas/CurrencyCodeDefinition"
-        properties:
-          type: object
-          additionalProperties:
-            type: string
+        description:
+          type: string
+        notificationUrl:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+
+    FailTransactionRequestDto:
+      type: object
+      required: [ transactionId, merchantId, traceId, notificationUrl, operation ]
+      properties:
+        transactionId:
+          type: string
+          format: uuid
+        merchantId:
+          type: string
+        traceId:
+          type: string
+        notificationUrl:
+          type: string
+        operation:
+          $ref: "#/components/schemas/Operation"
+
+    CancelTransactionRequestDto:
+      type: object
+      required: [ transactionId, merchantId, traceId, notificationUrl, operation ]
+      properties:
+        transactionId:
+          type: string
+          format: uuid
+        merchantId:
+          type: string
+        traceId:
+          type: string
+        notificationUrl:
+          type: string
+        operation:
+          $ref: "#/components/schemas/Operation"
 
     TransactionResponseDto:
       type: object
-      required: [ id, merchantId, amount, currency, operationType, status, createdAt ]
+      required: [ transactionId, merchantId, operation, amount, currency, status, createdAt, updatedAt ]
       properties:
-        id:
-          $ref: "#/components/schemas/UuidDefinition"
+        transactionId:
+          type: string
+          format: uuid
         merchantId:
           type: string
+        operation:
+          $ref: "#/components/schemas/Operation"
         amount:
           $ref: "#/components/schemas/AmountDefinition"
         currency:
           $ref: "#/components/schemas/CurrencyCodeDefinition"
-        operationType:
-          $ref: "#/components/schemas/OperationType"
         status:
           $ref: "#/components/schemas/TransactionStatus"
         createdAt:
@@ -316,63 +242,6 @@ components:
           format: date-time
         description:
           type: string
-        externalId:
-          type: string
-
-    TransactionStatusDto:
-      type: object
-      required: [ id, status, event_type ]
-      properties:
-        id:
-          $ref: "#/components/schemas/UuidDefinition"
-        status:
-          $ref: "#/components/schemas/TransactionStatus"
-        event_type:
-          $ref: "#/components/schemas/EventType"
-        notification_url:
-          type: string
-        description:
-          type: string
-
-    CancelTransactionDto:
-      type: object
-      required: [ id, status ]
-      properties:
-        id:
-          $ref: "#/components/schemas/UuidDefinition"
-        status:
-          $ref: "#/components/schemas/TransactionStatus"
-
-    ErrorDto:
-      type: object
-      required: [ http_status, message ]
-      properties:
-        http_status:
-          type: integer
-          format: int32
-        message:
-          type: string
-
-    OperationType:
-      enum: [ "DEPOSIT", "WITHDRAW", "TRANSFER" ]
-
-    AmountDefinition:
-      type: string
-      pattern: '^([1-9][0-9]*|[0]+)\.[0-9][0-9]$'
-      description: "Описание шаблона денежных средств в формате: 0.XX или Х.ХХ"
-
-    CurrencyCodeDefinition:
-      type: string
-      pattern: '^[A-Z]{3}$'
-      minLength: 3
-      maxLength: 3
-
-    TransactionStatus:
-      enum: [ "PENDING", "COMPLETED", "FAILED" ]
-
-    UuidDefinition:
-      type: string
-      pattern: '^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}$'
 
     MerchantRegistrationRequestDto:
       type: object
@@ -397,7 +266,7 @@ components:
 
     MerchantRegistrationResponseDto:
       type: object
-      required: [ merchantId, name, createdAt, role ]
+      required: [ merchantId, name, createdAt, updatedAt, role ]
       properties:
         merchantId:
           type: string
@@ -412,8 +281,32 @@ components:
         role:
           $ref: "#/components/schemas/UserRole"
 
+    ErrorDto:
+      type: object
+      required: [ http_status, message ]
+      properties:
+        http_status:
+          type: integer
+          format: int32
+        message:
+          type: string
+
+    AmountDefinition:
+      type: string
+      pattern: '^([1-9][0-9]*|[0]+)\.[0-9][0-9]$'
+      description: "Описание шаблона денежных средств в формате: 0.XX или Х.ХХ"
+
+    CurrencyCodeDefinition:
+      type: string
+      pattern: '^[A-Z]{3}$'
+      minLength: 3
+      maxLength: 3
+
+    TransactionStatus:
+      enum: [ "PENDING", "COMPLETED", "FAILED", "CANCELED", "REQUIRED_MANUAL_HANDLE", "MARKED_FAILED", "MARKED_CANCELED" ]
+
     UserRole:
       enum: [ "ADMIN", "USER" ]
 
-    EventType:
-      enum: [ "TRANSACTION_COMPLETED", "TRANSACTION_FAILED" ]
+    Operation:
+      enum: [ "DEPOSIT", "WITHDRAW", "TRANSFER" ]
