# payment-provider-service/src/main/java/aq/project/entities/TransactionMetadata.java
@@ -1,0 +1,42 @@
+package aq.project.entities;
+
+import jakarta.persistence.*;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Positive;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+import org.hibernate.envers.Audited;
+
+import java.time.OffsetDateTime;
+
+@Entity
+@Audited
+@Getter @Setter
+@NoArgsConstructor
+@Table(name = "transaction-metadata")
+public class TransactionMetadata {
+
+    @Id
+    @Positive
+    @Column(name = "id", nullable = false)
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @NotNull
+    @CreationTimestamp
+    @Column(name = "created_at", updatable = false, nullable = false)
+    private OffsetDateTime createdAt;
+
+    @NotNull
+    @UpdateTimestamp
+    @Column(name = "updated_at", nullable = false)
+    private OffsetDateTime updatedAt;
+
+    @NotBlank
+    @Column(name = "trace_id", nullable = false)
+    private String traceId;
+}
